# -

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0bcfe82286b6_initial_all_tables.py  281ea2901811_add_user_is_admin.py  df6f52e978b4_add_memory_confidence_fields.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/prompts/: __init__.py  intent_detection.py  memory_extraction.py  persona_summary.py
backend/app/ai/providers/: base.py  claude.py  factory.py
backend/app/ai/schemas/: __init__.py  chat.py  extraction.py
backend/app/ai/services/: __init__.py  llm_service.py  memory_intelligence_service.py
backend/app/api/: deps.py
backend/app/api/v1/: actions.py  (+15 more)
backend/app/core/: security.py
backend/app/models/: __init__.py  action.py  base.py  chat.py  event.py  insight.py  memory.py  observation.py  persona.py  relationship.py  user.py
backend/app/schemas/: __init__.py  action.py  chat.py  event.py  insight.py  memory.py  observation.py  persona.py  relationship.py  user.py
backend/app/services/: __init__.py  action_engine_service.py  event_service.py  graph_service.py  insight_engine_service.py  insight_service.py  life_story_service.py  memory_service.py  observation_service.py  persona_service.py  relationship_service.py  timeline_service.py
backend/relationship_intelligence.egg-info/: PKG-INFO  SOURCES.txt
backend/scripts/: init_admin.py
backend/tests/: test_sprint_2.3_acceptance.py  test_sprint_2.4_acceptance.py
(+53 files in other folders)
